# fwupd

./: .travis.yml  meson.build  meson_options.txt
contrib/: fwupd.spec.in
contrib/ci/: README.md  dependencies.txt  generate_debian_control.py
contrib/debian/: control  control.in
data/tests/hardware.d/: tests.hwdb
plugins/: meson.build
plugins/dfu/: dfu-chunked.c  dfu-context.c  dfu-context.h  dfu-device-private.h  dfu-device.c  dfu-quirks.hwdb  dfu-target-avr.c  fu-plugin-dfu.c  meson.build
plugins/purism/: README.md  fu-plugin-purism.c  meson.build
plugins/purism/example/: build.sh  com.Purism.Librem15v3.metainfo.xml  startup.sh
src/: fu-engine.c  fu-hwdb.c  fu-hwdb.h  fu-plugin-private.h  fu-plugin.c  fu-plugin.h  fu-self-test.c  meson.build
